--- a/plant-system/package.json
+++ b/plant-system/package.json
@@ -3,16 +3,29 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.12.2",
+    "bcryptjs": "^3.0.2",
     "concurrently": "^9.2.1",
     "cookie-parser": "~1.4.4",
+    "dateformat": "^5.0.3",
     "debug": "~2.6.9",
+    "dotenv": "^17.2.2",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.2",
+    "morgan": "~1.9.1",
+    "nodemailer": "^7.0.6",
+    "pg": "^8.16.3",
+    "qs": "^6.14.0"
   },
   "scripts": {
     "start:dev": "concurrently \"npm start --prefix client\" \"node ./bin/www\"",
-    "start": "npm run build --prefix client && node ./bin/www"
+    "start": "npm run build --prefix client && node ./bin/www",
+    "test:setup": "node test-setup.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "proxy": "http://localhost:3010"
 }
