--- a/plant-system/client/package.json
+++ b/plant-system/client/package.json
@@ -10,6 +10,9 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.0",
     "dayjs": "^1.11.9",
+    "i18next": "^23.10.0",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.5.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
     "qs": "^6.12.0",
@@ -18,6 +21,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.4",
+    "react-i18next": "^14.0.5",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "web-vitals": "2.1.4",
