--- a/plant-system/client/package.json
+++ b/plant-system/client/package.json
@@ -51,5 +51,11 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3010"
+  "proxy": "http://localhost:3010",
+  "devDependencies": {
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "babel-jest": "^30.2.0",
+    "identity-obj-proxy": "^3.0.0"
+  }
 }
