--- a/plant-system/package.json
+++ b/plant-system/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "concurrently": "^9.2.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "dateformat": "^5.0.3",
     "debug": "~2.6.9",
     "dotenv": "^17.2.2",
